Problem Link: https://codeforces.com/group/MWSDmqGsZm/contest/219856/problem/B

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "files.associations": {
     "*.dbclient-js": "javascript",
-    "stdio.h": "c"
+    "stdio.h": "c",
+    "xutility": "c"
   }
 }
